--- a/WebApplication1/Pages/_ViewImports.cshtml
+++ b/WebApplication1/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 @using WebApplication1
 @namespace WebApplication1.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Microsoft.Extensions.Options;
+@inject IOptions<ViewConfiguration> ViewConfiguration
