renamed a variable for clarity

--- a/WebApplication1/Pages/_ViewImports.cshtml
+++ b/WebApplication1/Pages/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using Microsoft.Extensions.Options;
-@inject IOptions<ViewConfiguration> ViewConfiguration
+
+@* Please rename this variable to something more appropriate to your application: *@
+@inject IOptions<ViewConfiguration> InjectedViewConfig
